change name, logo, block list instructions

--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Shut Up Settings</title>
+    <title>StartClean Settings</title>
     <style>
       body {
         font-family: system-ui, sans-serif;
@@ -38,7 +38,7 @@
     </label>
     <p id="status" role="status"></p>
     <p>
-      When enabled, Shut Up captures newly opened tabs right after the browser
+      When enabled, StartClean captures newly opened tabs right after the browser
       starts and adds them to your block list automatically.
     </p>
     <script src="popup.js"></script>
